# chunkwm-rs-template

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
plugin/: plugin.cpp  rust.h
src/: bridge.rs  lib.rs
