[package]
name = "template"
version = "0.1.0"
authors = ["Your Name"]

[lib]
name = "template"
path = "./src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# chunkwm = { git = "https://github.com/splintah/chunkwm-rs", features = ["accessibility"] }
chunkwm = { path = "/Users/splinter/code/chunkwm/chunkwm-rs", features = ["accessibility"] }
